--- a/package.json
+++ b/package.json
@@ -119,6 +119,7 @@
     "lovable-tagger": "^1.1.8",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
+    "terser": "^5.43.1",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.36.0",
     "vite": "^5.4.19"
