feat: update content and add new components

--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
     "npm": ">=8.0.0"
   },
   "scripts": {
+    "generate-pdf": "node scripts/generate-pdf.js",
+    "generate-reports": "node scripts/generate-all-reports.js",
     "dev": "vite",
     "build": "vite build",
-    "vercel-build": "vite build",
+    "vercel-build": "./scripts/build.sh",
     "build:dev": "vite build --mode development",
     "build:analyze": "vite build --mode analyze",
     "preview": "vite preview",
@@ -87,9 +89,12 @@
     "cmdk": "^1.1.1",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.6.0",
+    "html-pdf-node": "^1.0.8",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.462.0",
+    "markdown-it": "^14.1.0",
     "next-themes": "^0.3.0",
+    "puppeteer": "^24.14.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
